finishing main feature

--- a/src/assets/assetMapping.json
+++ b/src/assets/assetMapping.json
@@ -11,6 +11,7 @@
     "error": "#EF9A9A",
     "Rain": "#18B2D8",
     "Clear": "#FCC418",
+    "Haze": "#D9DEDF",
     "Thunderstorm": "#D9DEDF",
     "Snow": "#D9DEDF",
     "Drizzle": "#18B2D8",
